--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "compile-run": "^2.3.4",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "fs-extra": "^10.1.0",
     "mongoose": "^6.6.5",
     "nodemon": "^2.0.20",
     "uuid": "^9.0.0"
