--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-jwt": "^1.1.7",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-toast-notifications": "^2.5.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
