.env added for frontend & vercel file, Atlas Mongo url added

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT = 5000
 
-MONGO_URL = mongodb://localhost:27017/kodeIt
+MONGO_URL = mongodb+srv://adityamuley:Aditya*muley1@kodeit-database.7i1cnhf.mongodb.net/?retryWrites=true&w=majority
 
 JWT_SECRET = adityaisfuturesoftwareengineer
