--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,11 +1,9 @@
 {
     "version": 1,
-    "build": [
-        {
-            "src": "*.js",
-            "use": "@vercel/node"
-        }
-    ],
+    "build": {
+        "src": "*.js",
+        "use": "@vercel/node"
+    },
     "routes": [
         {
             "src": "/(.*)",
