--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,9 +1,11 @@
 {
-    "version": 1,
-    "build": {
-        "src": "*.js",
-        "use": "@vercel/node"
-    },
+    "version": 2,
+    "build": [
+        {
+            "src": "*.js",
+            "use": "@vercel/node"
+        }
+    ],
     "routes": [
         {
             "src": "/(.*)",
