--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,15 +1,14 @@
 {
-    "version": 2,
-    "build": [
+    "builds": [
         {
-            "src": "*.js",
+            "src": "index.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
-            "src": "/(.*)",
-            "dest": "/"
+          "src": "/(.*)",
+          "dest": "index.js"
         }
     ]
-}
+  }
