--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,15 +3,14 @@
     "version": 2,
     "builds": [
         {
-            "src": "./index.js",
+            "src": "*.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "index.js",
-            "methods": ["GET", "POST", "PATCH", "DELETE", "OPTIONS"]
+            "dest": "/"
         }
     ]
 }
