initial docker setup

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT = 5000
 
-MONGO_URL = mongodb://localhost:27017/kodeIt
+MONGO_URL = mongodb://kodeIt-db
 
 JWT_SECRET = adityaisfuturesoftwareengineer
