application running using docker

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT = 5000
 
-MONGO_URL = mongodb://kodeIt-db
+MONGO_URL = mongodb://kodeIt_db/kodeItDB
 
 JWT_SECRET = adityaisfuturesoftwareengineer
